# backwood

./: .gitignore  CMakeLists.txt  README.md
bw/: CMakeLists.txt
bw/ext/: GLLogging.hpp
bw/graphics/: Color.cpp  Color.hpp  EBMapContext.cpp  EBMapContext.hpp  ElementBuffer.cpp  ElementBuffer.hpp  IBufferMapContext.hpp  IBufferMappingContext.hpp  IBufferStorage.hpp  IReleasable.hpp  IResource.hpp  IWindowApi.hpp  IWindowBase.hpp  Primitive.hpp  RenderCanvas.cpp  RenderCanvas.hpp  RenderOptions.hpp  RenderWindow.cpp  RenderWindow.hpp  Shader.cpp  Shader.hpp  ShaderProgram.cpp  ShaderProgram.hpp  SimpleWindow.cpp  SimpleWindow.hpp  VBMapContext.cpp  VBMapContext.hpp  Vertex.hpp  VertexArray.cpp  VertexArray.hpp  VertexBuffer.cpp  VertexBuffer.hpp  VertexBufferMappingContext.cpp  VertexBufferMappingContext.hpp
bw/input/: Keyboard.hpp
bw/math/: Bounds.hpp  Circle.hpp  Matrix.hpp  Matrix.tpp  Rect.hpp  Vec2.hpp  Vec2.tpp  Vec3.hpp  Vec3.tpp  Vec4.hpp  Vec4.tpp
bw/utils/: ILogger.hpp  Logger.cpp  Logger.hpp
tests/: CMakeLists.txt  ElementBuffer_test.cc  Matrix_test.cc  Matrix_transform_test.cc  OpenGLTestEnvironment.cpp  OpenGLTestEnvironment.hpp  Vec2_test.cc  Vec3_test.cc  Vec4_test.cc  VertexArray_test.cc  VertexBuffer_test.cc  main.cpp
